--- a/apis.yml
+++ b/apis.yml
@@ -1,33 +1,39 @@
 aid: salad-transcription-api
-name: Salad Transcription API
-description: >-
-  Salad Transcription API, powered by Whisper Large v3, offers unparalleled
-  transcription accuracy, translation, summarization & analysis, all for
-  $0.10/hour, ...
-type: Index
-position: Consumer
-access: 3rd-Party
-image: https://kinlane-productions.s3.amazonaws.com/apis-json/apis-json-logo.jpg
-tags:
-  - API
-created: '2024-11-17'
-modified: '2024-11-17'
 url: >-
   https://raw.githubusercontent.com/api-search/salad-transcription-api/refs/heads/main/apis.yml
-specificationVersion: '0.19'
 apis:
   - aid: salad-transcription-api:salad-transcription-api
     name: Salad Transcription API
+    tags:
+      - API
+    humanURL: https://salad.com/transcription
+    properties:
+      - url: https://salad.com/transcription
+        type: Documentation
     description: >-
       Salad Transcription API, powered by Whisper Large v3, offers unparalleled
       transcription accuracy, translation, summarization & analysis, all for
       $0.10/hour, ...
-    humanURL: https://salad.com/transcription
-    tags:
-      - API
-    properties:
-      - type: Documentation
-        url: https://salad.com/transcription
+name: Salad Transcription API
+tags:
+  - Transcription
+type: Contract
+image: https://kinlane-productions.s3.amazonaws.com/apis-json/apis-json-logo.jpg
+access: 3rd-Party
+created: '2024-11-17'
+modified: '2025-01-03'
+position: Consuming
+description: >-
+  Salad Transcription API is a powerful tool that allows users to convert speech
+  into written text in a variety of languages. This API uses advanced algorithms
+  to accurately transcribe audio files, making it a valuable tool for businesses
+  looking to efficiently convert spoken content into text for documentation or
+  analysis. Additionally, Salad Transcription API offers real-time transcription
+  capabilities, allowing users to transcribe live conversations or presentations
+  with ease. With its high level of accuracy and reliability, Salad
+  Transcription API simplifies the transcription process and improves
+  productivity for users in a wide range of fields.
 maintainers:
   - FN: Kin Lane
     email: info@apievangelist.com
+specificationVersion: '0.19'
