--- a/apis.yml
+++ b/apis.yml
@@ -5,7 +5,7 @@ apis:
   - aid: salad-transcription-api:salad-transcription-api
     name: Salad Transcription API
     tags:
-      - API
+      - Transcription
     humanURL: https://salad.com/transcription
     properties:
       - url: https://salad.com/transcription
@@ -13,9 +13,11 @@ apis:
       - type: OpenAPI
         url: properties/salad-transcription-api-openapi.yml
     description: >-
-      Salad Transcription API, powered by Whisper Large v3, offers unparalleled
-      transcription accuracy, translation, summarization & analysis, all for
-      $0.10/hour, ...
+      Salad Transcription API allows users to convert speech into written text
+      in a variety of languages. This API uses advanced algorithms to accurately
+      transcribe audio files, making it a valuable tool for businesses looking
+      to efficiently convert spoken content into text for documentation or
+      analysis. 
 name: Salad Transcription API
 tags:
   - Transcription
