--- a/apis.yml
+++ b/apis.yml
@@ -5,19 +5,15 @@ apis:
   - aid: salad-transcription-api:salad-transcription-api
     name: Salad Transcription API
     tags:
-      - Transcription
+      - API
     humanURL: https://salad.com/transcription
     properties:
       - url: https://salad.com/transcription
         type: Documentation
-      - type: OpenAPI
-        url: properties/salad-transcription-api-openapi.yml
     description: >-
-      Salad Transcription API allows users to convert speech into written text
-      in a variety of languages. This API uses advanced algorithms to accurately
-      transcribe audio files, making it a valuable tool for businesses looking
-      to efficiently convert spoken content into text for documentation or
-      analysis. 
+      Salad Transcription API, powered by Whisper Large v3, offers unparalleled
+      transcription accuracy, translation, summarization & analysis, all for
+      $0.10/hour, ...
 name: Salad Transcription API
 tags:
   - Transcription
@@ -41,3 +37,7 @@ maintainers:
   - FN: Kin Lane
     email: info@apievangelist.com
 specificationVersion: '0.19'
+common:
+  - name: Postman Workspace
+    url: https://www.postman.com/salad-apis/salad/overview
+    type: PostmanWorkspace
