--- a/apis.yml
+++ b/apis.yml
@@ -10,10 +10,14 @@ apis:
     properties:
       - url: https://salad.com/transcription
         type: Documentation
+      - type: OpenAPI
+        url: properties/salad-transcription-api-openapi.yml
     description: >-
-      Salad Transcription API, powered by Whisper Large v3, offers unparalleled
-      transcription accuracy, translation, summarization & analysis, all for
-      $0.10/hour, ...
+      Salad Transcription API is a powerful tool that allows users to convert
+      speech into written text in a variety of languages. This API uses advanced
+      algorithms to accurately transcribe audio files, making it a valuable tool
+      for businesses looking to efficiently convert spoken content into text for
+      documentation or analysis. 
 name: Salad Transcription API
 tags:
   - Transcription
