--- a/review.yml
+++ b/review.yml
@@ -1,4 +1,4 @@
-executed: '2025-01-03T16:05:19.606Z'
+executed: '2025-01-03T16:07:25.636Z'
 results:
   - code: apis-json-specification-aid-info
     message: There is an aid.
@@ -34,8 +34,8 @@ results:
         line: 3
         character: 5
       end:
-        line: 15
-        character: 21
+        line: 19
+        character: 33
   - code: apis-json-apis-baseURL-error
     message: APIs MUST Have a Base URL
     path:
@@ -47,8 +47,8 @@ results:
         line: 4
         character: 4
       end:
-        line: 15
-        character: 21
+        line: 19
+        character: 33
   - code: apis-json-apis-contact-error
     message: API COULD have a contact.
     path:
@@ -60,8 +60,8 @@ results:
         line: 4
         character: 4
       end:
-        line: 15
-        character: 21
+        line: 19
+        character: 33
   - code: apis-json-apis-aid-info
     message: API has an aid property.
     path:
@@ -165,6 +165,22 @@ results:
       end:
         line: 11
         character: 27
+  - code: apis-json-apis-properties-openapi-info
+    message: Has An OpenAPI
+    path:
+      - apis
+      - '0'
+      - properties
+      - '1'
+      - type
+    severity: 2
+    range:
+      start:
+        line: 13
+        character: 14
+      end:
+        line: 13
+        character: 21
   - code: apis-json-apis-description-info
     message: Has a Description
     path:
@@ -174,11 +190,11 @@ results:
     severity: 2
     range:
       start:
-        line: 12
+        line: 14
         character: 17
       end:
-        line: 15
-        character: 21
+        line: 19
+        character: 33
   - code: apis-json-name-info
     message: There is a name.
     path:
@@ -186,10 +202,10 @@ results:
     severity: 2
     range:
       start:
-        line: 16
+        line: 20
         character: 6
       end:
-        line: 16
+        line: 20
         character: 29
   - code: apis-json-tags-info
     message: There is a Tags Object
@@ -198,10 +214,10 @@ results:
     severity: 2
     range:
       start:
-        line: 17
+        line: 21
         character: 5
       end:
-        line: 18
+        line: 22
         character: 17
   - code: apis-json-tags-upper-case-info
     message: Tags Upper Case
@@ -211,10 +227,10 @@ results:
     severity: 2
     range:
       start:
-        line: 18
+        line: 22
         character: 4
       end:
-        line: 18
+        line: 22
         character: 17
   - code: apis-json-specification-type-info
     message: There is a specification type.
@@ -223,10 +239,10 @@ results:
     severity: 2
     range:
       start:
-        line: 19
+        line: 23
         character: 6
       end:
-        line: 19
+        line: 23
         character: 14
   - code: apis-json-image-info
     message: There is an image.
@@ -235,99 +251,11 @@ results:
     severity: 2
     range:
       start:
-        line: 20
+        line: 24
         character: 7
       end:
-        line: 20
+        line: 24
         character: 80
-  - code: apis-json-created-info
-    message: There is a created date.
-    path:
-      - created
-    severity: 2
-    range:
-      start:
-        line: 22
-        character: 9
-      end:
-        line: 22
-        character: 21
-  - code: apis-json-modified-info
-    message: There is a modified date.
-    path:
-      - modified
-    severity: 2
-    range:
-      start:
-        line: 23
-        character: 10
-      end:
-        line: 23
-        character: 22
-  - code: apis-json-description-info
-    message: There is a description.
-    path:
-      - description
-    severity: 2
-    range:
-      start:
-        line: 25
-        character: 13
-      end:
-        line: 34
-        character: 51
-  - code: apis-json-maintainers-info
-    message: There is a maintainer object.
-    path:
-      - maintainers
-    severity: 2
-    range:
-      start:
-        line: 35
-        character: 12
-      end:
-        line: 37
-        character: 33
-  - code: apis-json-maintainers-fn-info
-    message: There is a FN property for maintainers.
-    path:
-      - maintainers
-      - '0'
-      - FN
-    severity: 2
-    range:
-      start:
-        line: 36
-        character: 8
-      end:
-        line: 36
-        character: 16
-  - code: apis-json-maintainers-email-info
-    message: There is a email property for maintainers.
-    path:
-      - maintainers
-      - '0'
-      - email
-    severity: 2
-    range:
-      start:
-        line: 37
-        character: 11
-      end:
-        line: 37
-        character: 33
-  - code: apis-json-specification-version-info
-    message: There is a specification version.
-    path:
-      - specificationVersion
-    severity: 2
-    range:
-      start:
-        line: 38
-        character: 22
-      end:
-        line: 38
-        character: 28
   - code: apis-json-common-info
     message: There is an common property.
     path:
@@ -335,10 +263,10 @@ results:
     severity: 2
     range:
       start:
-        line: 39
+        line: 26
         character: 7
       end:
-        line: 42
+        line: 29
         character: 26
   - code: apis-json-apis-properties-url-info
     message: Property URLs Are Valid
@@ -349,10 +277,10 @@ results:
     severity: 2
     range:
       start:
-        line: 41
+        line: 27
         character: 9
       end:
-        line: 41
+        line: 27
         character: 58
   - code: apis-json-apis-properties-postman-public-workspace-info
     message: Has Public Postman Workspace
@@ -363,8 +291,96 @@ results:
     severity: 2
     range:
       start:
-        line: 42
+        line: 29
         character: 10
       end:
-        line: 42
+        line: 29
         character: 26
+  - code: apis-json-created-info
+    message: There is a created date.
+    path:
+      - created
+    severity: 2
+    range:
+      start:
+        line: 30
+        character: 9
+      end:
+        line: 30
+        character: 21
+  - code: apis-json-modified-info
+    message: There is a modified date.
+    path:
+      - modified
+    severity: 2
+    range:
+      start:
+        line: 31
+        character: 10
+      end:
+        line: 31
+        character: 22
+  - code: apis-json-description-info
+    message: There is a description.
+    path:
+      - description
+    severity: 2
+    range:
+      start:
+        line: 33
+        character: 13
+      end:
+        line: 42
+        character: 51
+  - code: apis-json-maintainers-info
+    message: There is a maintainer object.
+    path:
+      - maintainers
+    severity: 2
+    range:
+      start:
+        line: 43
+        character: 12
+      end:
+        line: 45
+        character: 33
+  - code: apis-json-maintainers-fn-info
+    message: There is a FN property for maintainers.
+    path:
+      - maintainers
+      - '0'
+      - FN
+    severity: 2
+    range:
+      start:
+        line: 44
+        character: 8
+      end:
+        line: 44
+        character: 16
+  - code: apis-json-maintainers-email-info
+    message: There is a email property for maintainers.
+    path:
+      - maintainers
+      - '0'
+      - email
+    severity: 2
+    range:
+      start:
+        line: 45
+        character: 11
+      end:
+        line: 45
+        character: 33
+  - code: apis-json-specification-version-info
+    message: There is a specification version.
+    path:
+      - specificationVersion
+    severity: 2
+    range:
+      start:
+        line: 46
+        character: 22
+      end:
+        line: 46
+        character: 28
