--- a/review.yml
+++ b/review.yml
@@ -1,4 +1,4 @@
-executed: '2025-01-03T16:07:25.636Z'
+executed: '2025-01-03T16:11:46.227Z'
 results:
   - code: apis-json-specification-aid-info
     message: There is an aid.
@@ -34,7 +34,7 @@ results:
         line: 3
         character: 5
       end:
-        line: 19
+        line: 21
         character: 33
   - code: apis-json-apis-baseURL-error
     message: APIs MUST Have a Base URL
@@ -47,7 +47,7 @@ results:
         line: 4
         character: 4
       end:
-        line: 19
+        line: 21
         character: 33
   - code: apis-json-apis-contact-error
     message: API COULD have a contact.
@@ -60,7 +60,7 @@ results:
         line: 4
         character: 4
       end:
-        line: 19
+        line: 21
         character: 33
   - code: apis-json-apis-aid-info
     message: API has an aid property.
@@ -102,8 +102,8 @@ results:
         line: 6
         character: 9
       end:
-        line: 7
-        character: 11
+        line: 9
+        character: 19
   - code: apis-json-apis-tags-upper-case-info
     message: API Tags are Upper Case
     path:
@@ -118,7 +118,37 @@ results:
         character: 8
       end:
         line: 7
-        character: 11
+        character: 12
+  - code: apis-json-apis-tags-upper-case-info
+    message: API Tags are Upper Case
+    path:
+      - apis
+      - '0'
+      - tags
+      - '1'
+    severity: 2
+    range:
+      start:
+        line: 8
+        character: 8
+      end:
+        line: 8
+        character: 22
+  - code: apis-json-apis-tags-upper-case-info
+    message: API Tags are Upper Case
+    path:
+      - apis
+      - '0'
+      - tags
+      - '2'
+    severity: 2
+    range:
+      start:
+        line: 9
+        character: 8
+      end:
+        line: 9
+        character: 19
   - code: apis-json-apis-humanURL-info
     message: Has a Human URL
     path:
@@ -128,10 +158,10 @@ results:
     severity: 2
     range:
       start:
-        line: 8
+        line: 10
         character: 14
       end:
-        line: 8
+        line: 10
         character: 45
   - code: apis-json-apis-properties-url-info
     message: Property URLs Are Valid
@@ -144,10 +174,10 @@ results:
     severity: 2
     range:
       start:
-        line: 10
+        line: 12
         character: 13
       end:
-        line: 10
+        line: 12
         character: 44
   - code: apis-json-apis-properties-documentation-info
     message: Has Documentation
@@ -160,10 +190,10 @@ results:
     severity: 2
     range:
       start:
-        line: 11
+        line: 13
         character: 14
       end:
-        line: 11
+        line: 13
         character: 27
   - code: apis-json-apis-properties-openapi-info
     message: Has An OpenAPI
@@ -176,10 +206,10 @@ results:
     severity: 2
     range:
       start:
-        line: 13
+        line: 15
         character: 14
       end:
-        line: 13
+        line: 15
         character: 21
   - code: apis-json-apis-description-info
     message: Has a Description
@@ -190,10 +220,10 @@ results:
     severity: 2
     range:
       start:
-        line: 14
+        line: 16
         character: 17
       end:
-        line: 19
+        line: 21
         character: 33
   - code: apis-json-name-info
     message: There is a name.
@@ -202,10 +232,10 @@ results:
     severity: 2
     range:
       start:
-        line: 20
+        line: 22
         character: 6
       end:
-        line: 20
+        line: 22
         character: 29
   - code: apis-json-tags-info
     message: There is a Tags Object
@@ -214,10 +244,10 @@ results:
     severity: 2
     range:
       start:
-        line: 21
+        line: 23
         character: 5
       end:
-        line: 22
+        line: 24
         character: 17
   - code: apis-json-tags-upper-case-info
     message: Tags Upper Case
@@ -227,10 +257,10 @@ results:
     severity: 2
     range:
       start:
-        line: 22
+        line: 24
         character: 4
       end:
-        line: 22
+        line: 24
         character: 17
   - code: apis-json-specification-type-info
     message: There is a specification type.
@@ -239,10 +269,10 @@ results:
     severity: 2
     range:
       start:
-        line: 23
+        line: 25
         character: 6
       end:
-        line: 23
+        line: 25
         character: 14
   - code: apis-json-image-info
     message: There is an image.
@@ -251,10 +281,10 @@ results:
     severity: 2
     range:
       start:
-        line: 24
+        line: 26
         character: 7
       end:
-        line: 24
+        line: 26
         character: 80
   - code: apis-json-common-info
     message: There is an common property.
@@ -263,11 +293,11 @@ results:
     severity: 2
     range:
       start:
-        line: 26
+        line: 28
         character: 7
       end:
-        line: 29
-        character: 26
+        line: 63
+        character: 15
   - code: apis-json-apis-properties-url-info
     message: Property URLs Are Valid
     path:
@@ -277,10 +307,10 @@ results:
     severity: 2
     range:
       start:
-        line: 27
+        line: 29
         character: 9
       end:
-        line: 27
+        line: 29
         character: 58
   - code: apis-json-apis-properties-postman-public-workspace-info
     message: Has Public Postman Workspace
@@ -291,11 +321,165 @@ results:
     severity: 2
     range:
       start:
-        line: 29
+        line: 31
         character: 10
       end:
-        line: 29
+        line: 31
         character: 26
+  - code: apis-json-apis-properties-url-info
+    message: Property URLs Are Valid
+    path:
+      - common
+      - '1'
+      - url
+    severity: 2
+    range:
+      start:
+        line: 34
+        character: 9
+      end:
+        line: 34
+        character: 34
+  - code: apis-json-apis-properties-pricing-info
+    message: Has Pricing
+    path:
+      - common
+      - '1'
+      - type
+    severity: 2
+    range:
+      start:
+        line: 35
+        character: 10
+      end:
+        line: 35
+        character: 17
+  - code: apis-json-apis-properties-url-info
+    message: Property URLs Are Valid
+    path:
+      - common
+      - '2'
+      - url
+    severity: 2
+    range:
+      start:
+        line: 38
+        character: 9
+      end:
+        line: 38
+        character: 34
+  - code: apis-json-apis-properties-about-info
+    message: Has About
+    path:
+      - common
+      - '2'
+      - type
+    severity: 2
+    range:
+      start:
+        line: 39
+        character: 10
+      end:
+        line: 39
+        character: 15
+  - code: apis-json-apis-properties-url-info
+    message: Property URLs Are Valid
+    path:
+      - common
+      - '4'
+      - url
+    severity: 2
+    range:
+      start:
+        line: 46
+        character: 9
+      end:
+        line: 46
+        character: 35
+  - code: apis-json-apis-properties-security-info
+    message: Has Security Path
+    path:
+      - common
+      - '4'
+      - type
+    severity: 2
+    range:
+      start:
+        line: 47
+        character: 10
+      end:
+        line: 47
+        character: 18
+  - code: apis-json-apis-properties-url-info
+    message: Property URLs Are Valid
+    path:
+      - common
+      - '5'
+      - url
+    severity: 2
+    range:
+      start:
+        line: 50
+        character: 9
+      end:
+        line: 50
+        character: 34
+  - code: apis-json-apis-properties-privacy-policy-info
+    message: Has an API Privacy Policy
+    path:
+      - common
+      - '5'
+      - type
+    severity: 2
+    range:
+      start:
+        line: 51
+        character: 10
+      end:
+        line: 51
+        character: 23
+  - code: apis-json-apis-properties-url-info
+    message: Property URLs Are Valid
+    path:
+      - common
+      - '6'
+      - url
+    severity: 2
+    range:
+      start:
+        line: 54
+        character: 9
+      end:
+        line: 54
+        character: 32
+  - code: apis-json-apis-properties-terms-of-service-info
+    message: Has an API Terms of Service
+    path:
+      - common
+      - '6'
+      - type
+    severity: 2
+    range:
+      start:
+        line: 55
+        character: 10
+      end:
+        line: 55
+        character: 24
+  - code: apis-json-apis-properties-url-info
+    message: Property URLs Are Valid
+    path:
+      - common
+      - '7'
+      - url
+    severity: 2
+    range:
+      start:
+        line: 58
+        character: 9
+      end:
+        line: 58
+        character: 32
   - code: apis-json-created-info
     message: There is a created date.
     path:
@@ -303,10 +487,10 @@ results:
     severity: 2
     range:
       start:
-        line: 30
+        line: 64
         character: 9
       end:
-        line: 30
+        line: 64
         character: 21
   - code: apis-json-modified-info
     message: There is a modified date.
@@ -315,10 +499,10 @@ results:
     severity: 2
     range:
       start:
-        line: 31
+        line: 65
         character: 10
       end:
-        line: 31
+        line: 65
         character: 22
   - code: apis-json-description-info
     message: There is a description.
@@ -327,10 +511,10 @@ results:
     severity: 2
     range:
       start:
-        line: 33
+        line: 67
         character: 13
       end:
-        line: 42
+        line: 76
         character: 51
   - code: apis-json-maintainers-info
     message: There is a maintainer object.
@@ -339,10 +523,10 @@ results:
     severity: 2
     range:
       start:
-        line: 43
+        line: 77
         character: 12
       end:
-        line: 45
+        line: 79
         character: 33
   - code: apis-json-maintainers-fn-info
     message: There is a FN property for maintainers.
@@ -353,10 +537,10 @@ results:
     severity: 2
     range:
       start:
-        line: 44
+        line: 78
         character: 8
       end:
-        line: 44
+        line: 78
         character: 16
   - code: apis-json-maintainers-email-info
     message: There is a email property for maintainers.
@@ -367,10 +551,10 @@ results:
     severity: 2
     range:
       start:
-        line: 45
+        line: 79
         character: 11
       end:
-        line: 45
+        line: 79
         character: 33
   - code: apis-json-specification-version-info
     message: There is a specification version.
@@ -379,8 +563,8 @@ results:
     severity: 2
     range:
       start:
-        line: 46
+        line: 80
         character: 22
       end:
-        line: 46
+        line: 80
         character: 28
